--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+	<head>
+	</head>
+	<body>
+<b>College of Engineering Research Open House Poster</b>
+<br>
+<object data="./ModerateTemperatureThermophotovoltaicsPoster.pdf" type="application/pdf" width=100% height="100%">
+	<p>Unable to display PDF file. <a href="./ModerateTemperatureThermophotovoltaicsPoster.pdf">Download</a> instead.</p>
+</object>
+	</body>
+</html>
