--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	</head>
 	<body>
-<b>College of Engineering Research Open House Poster</b>
+<b>College of Engineering Research Open House Poster</b> (Last update 4/18/2023)
 <br>
 <object data="./ModerateTemperatureThermophotovoltaicsPoster.pdf" type="application/pdf" width=100% height="100%">
 	<p>Unable to display PDF file. <a href="./ModerateTemperatureThermophotovoltaicsPoster.pdf">Download</a> instead.</p>
